# Ref39TopicAssistant

./: .gitignore  ARCHITECTURE.md  BACKEND_MIGRATION.md  CONTRIBUTING.md  README.md  UI_GUIDE.md  angular.json  copilot-instructions.md  eslint.config.js  package-lock.json  package.json
.github/agents/: my-agent.agent.md
backend/: Cargo.toml  README.md
backend/src/: main.rs  tests.rs
backend/src/api/: datastore.rs  members.rs  mod.rs  search.rs  tags.rs  topics.rs
backend/src/auth/: mod.rs
backend/src/config/: mod.rs
backend/src/db/: mod.rs  repository.rs
backend/src/errors/: mod.rs
backend/src/models/: datastore.rs  member.rs  mod.rs  tag.rs  topic.rs
backend/src/search/: mod.rs
server/share/app/: 3rdpartylicenses.txt
server/share/app/browser/: chunk-6JI76I22.js  chunk-A4VYKBFS.js  chunk-JAZFKOO2.js  chunk-NGRXEZPU.js  chunk-PXPNDNOT.js  chunk-SR4BDTLV.js  chunk-UP7LYBPT.js  chunk-VCYJUELA.js  chunk-WUHU4XGI.js  chunk-Y3VMT3H7.js  index.html  main-3O3H56BE.js  main-6DHOBB7U.js  main-7HS67AVI.js  main-AZCPPVBN.js  main-C6MCOTRQ.js  main-CJOGFCRI.js  main-D7LB3N6T.js  main-EEMVJISJ.js  main-ID4FQRVZ.js  main-JZ4Q5HRX.js  main-L5DZAFDG.js  main-SQDF4RLR.js  main-UWU6EQHB.js  main-ZCZE6CPU.js  styles-5A43F3F4.css  styles-5PI5QNYW.css  styles-AMQAZUEN.css  styles-PUZ5MGXS.css  styles-QGGTHXJO.css  styles-R3TAFYZL.css  styles-VJTWLHV2.css
src/: index.html  styles.css  styles.scss
src/app/: app.component.html  app.component.scss  app.component.ts  app.config.ts  app.css  app.html  app.routes.ts  app.scss  app.spec.ts  app.ts
test_data/: datastore.json
(+108 files in other folders)
